force-app/main/default/objects/ExaminationInfo__c/ExaminationInfo__c.object-meta.xml
<CustomObject>
    <label>受験情報</label>
    <nameField>
        <displayFormat>EXAM-{0}</displayFormat>
        <label>受験情報Id</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>