force-app/main/default/objects/ExaminationInfo__c/fields/AssignUser__c.field-meta.xml
<CustomField>
    <fullName>AssignUser__c</fullName>
    <formula>Voucher__r.AssignUser__r.LastName &amp; &quot; &quot; &amp;  Voucher__r.AssignUser__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>対象者</label>
    <type>Text</type>
</CustomField>