force-app/main/default/objects/ExaminationInfo__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <label>試験</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesforceCertificatedList</valueSetName>
    </valueSet>
</CustomField>