force-app/main/default/objects/ExaminationInfo__c/fields/FinalDecisionDate__c.field-meta.xml
<CustomField>
    <fullName>FinalDecisionDate__c</fullName>
    <formula>Voucher__r.FinalDecision__r.Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>決裁日</label>
    <type>Date</type>
</CustomField>