force-app/main/default/objects/ExaminationInfo__c/fields/FinalDecisionNumber__c.field-meta.xml
<CustomField>
    <fullName>FinalDecisionNumber__c</fullName>
    <formula>Voucher__r.FinalDecision__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>決裁番号</label>
    <type>Text</type>
</CustomField>