force-app/main/default/objects/ExaminationInfo__c/fields/LimitDate__c.field-meta.xml
<CustomField>
    <fullName>LimitDate__c</fullName>
    <formula>Voucher__r.LimitDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>利用期日</label>
    <type>Date</type>
</CustomField>