force-app/main/default/objects/ExaminationInfo__c/fields/PassOrFail__c.field-meta.xml
<CustomField>
    <fullName>PassOrFail__c</fullName>
    <label>合否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PassOrFail</valueSetName>
    </valueSet>
</CustomField>