force-app/main/default/objects/ExaminationInfo__c/fields/Voucher__c.field-meta.xml
<CustomField>
    <fullName>Voucher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>バウチャー</label>
    <referenceTo>Voucher__c</referenceTo>
    <relationshipLabel>受験情報</relationshipLabel>
    <relationshipName>Examination_Voucher</relationshipName>
    <type>Lookup</type>
</CustomField>