force-app/main/default/objects/ExaminationInfo__c/fields/VoucherNumber__c.field-meta.xml
<CustomField>
    <fullName>VoucherNumber__c</fullName>
    <formula>Voucher__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>バウチャー番号</label>
    <type>Text</type>
</CustomField>