force-app/main/default/objects/ExaminationInfo__c/fields/WillExam__c.field-meta.xml
<CustomField>
    <fullName>WillExam__c</fullName>
    <inlineHelpText>初期登録時には予定日を入力してください。
受験した場合は、受験日を入力してください。
「会社立替費用決定通知書」に必要です。</inlineHelpText>
    <label>受験日</label>
    <type>Date</type>
</CustomField>