force-app/main/default/objects/ExaminationInfo__c/recordTypes/VoucherManagement.recordType-meta.xml
<RecordType>
    <fullName>VoucherManagement</fullName>
    <active>true</active>
    <description>最後の手段で{ getPicklistValues } from &#39;lightning/uiObjectInfoApi&#39;を使うために作る</description>
    <label>バウチャー管理</label>
</RecordType>