force-app/main/default/objects/ExaminationInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Voucher__c</columns>
    <columns>Exam__c</columns>
    <columns>PassOrFail__c</columns>
    <columns>WillExam__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>